# fred-utils-pylogger

./: .bumpversion.cfg  .flake8  .gitignore  .gitlab-ci.yml  .isort.cfg  .pydocstylerc  AUTHORS  CHANGELOG.rst  ChangeLog  ChangeLog.rst  MANIFEST.in  Makefile  dependency_links.txt  fred-pylogger.spec  requirements.txt  setup.cfg  setup.py  tox.ini
.copr/: Makefile
contrib/fedora/: fred-pylogger.spec
docker/ubuntu:bionic/: Dockerfile
pylogger/: __init__.py  corbalogger.py  corbarecoder.py  dummylogger.py
