[options]
zip_safe = false

[bdist_rpm]
build-requires=fred-distutils
install-extra-opts=--prefix=/usr --install-sysconf=/etc --install-localstate=/var

[flake8]
max-line-length = 120
max-complexity = 10

[isort]
line_length = 120
known_first_party = pylogger
default_section = THIRDPARTY
combine_as_imports = true

[pydocstyle]
convention = google
add_select = D204,D400,D401
add_ignore = D1
